2006-01-08  Phil Blundell  <pb@reciva.com>

	* gpeclockface.c (DEFAULT_HAND_WIDTH): New.
	(struct _GpeClockFace): New member hand_width_set.
	(gpe_clock_face_expose) [HAVE_CAIRO]: Draw central black "spindle"
	to hide ends of hands.
	(gpe_clock_face_do_set_radius): New.
	(gpe_clock_face_size_allocate): Call it.
	(gpe_clock_face_set_radius): Likewise.
	(gpe_clock_face_init): Clear clock->hand_width_set.  Use
	DEFAULT_HAND_WIDTH as default hand width.
	(gpe_clock_face_set_hand_width): Set clock->hand_width_set.

2006-01-08  Phil Blundell  <pb@reciva.com>

	* gpeclockface.c (struct _GpeClockFace): New member radius_set.
	(gpe_clock_face_expose): Improve non-cairo drawing code.
	(gpe_clock_face_size_allocate): Allow radius to follow size
	allocation if not specified explicitly.  Try harder to get a
	square allocation from parent container.
	(gpe_clock_face_size_request): Tweak arithmetic.
	(gpe_clock_face_init): Clear clock->radius_set.
	(gpe_clock_face_set_radius): Set clock->radius_set.

	* Makefile.am (GPEWIDGET_CFLAGS) [CAIRO]: Add -DHAVE_CAIRO.
	* configure.ac: Make "--disable-cairo" work as expected.  Use
	cairo by default if it's installed, and mention it in the
	configuration summary.  Add automake conditional for CAIRO.

2006-01-03  Florian Boor <florian@kernelconcepts.de>

	* Version 0.106 released.
	* Makefile.am: Remove not existing debian/compat from EXTRA_DIST. 
    
2006-01-02  Phil Blundell  <pb@reciva.com>

	* screensize.c (gdk_screen_width): Fix signed/unsigned warnings.
	(gdk_screen_height): Likewise.
	* translabel.c (filter): Likewise.
	* gpewindowbits.c (gpe_get_wm_class): Likewise.
	(gpe_get_window_name): Likewise.
	* gpehelp.c (gpe_show_help): Fix g_free(const char *) warning.

2005-12-16 Philippe De Swert <philippedeswert@scarlet.be>

	* Makefile.am : Added the necessary entries for building the gpedialog stuff
	* gpe-dialog.c : New file containing the gpe_info_dialog 
	* gpe/gpe-dialog.h : Include file that fits in with gpe-dialog.c